[project]
name = "btc-flow-monitor"
version = "0.1.0"
description = "Institutional-grade BTC Gamma Exposure (GEX) Monitor — Deribit Options Analytics Engine"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "scipy>=1.14",
    "websockets>=13.0",
    "httpx>=0.27",
    "loguru>=0.7",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "matplotlib>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
